@@ -1,7 +1,7 @@
 package aMachineCoding.elevatorSystem.strategies.dispatcher;
 
 import aMachineCoding.elevatorSystem.models.Elevator;
-import aMachineCoding.elevatorSystem.models.Request;
+import aMachineCoding.elevatorSystem.models.HallRequest;
 import aMachineCoding.elevatorSystem.models.enums.Direction;
 import aMachineCoding.elevatorSystem.models.enums.ElevatorStatus;
 import aMachineCoding.elevatorSystem.strategies.ElevatorDispatcher;
@@ -11,12 +11,14 @@ import java.util.List;
 public class NearestCarDispatcher implements ElevatorDispatcher {
 
     @Override
-    public Elevator selectElevator(List<Elevator> elevators, Request request) {
+    public Elevator selectElevator(List<Elevator> elevators, HallRequest hallRequest) {
+
         Elevator selected = null;
         int minDistance = Integer.MAX_VALUE;
-        int reqFloor = request.getFloor().getFloorValue();
+        int reqFloor = hallRequest.floor().getFloorValue();
 
         for (Elevator e : elevators) {
+
             if (e.getStatus() == ElevatorStatus.IDLE) {
                 // prefer idle elevator immediately if it's very close
                 int dist = Math.abs(e.getCurrentFloor().getFloorValue() - reqFloor);
@@ -31,8 +33,13 @@ public class NearestCarDispatcher implements ElevatorDispatcher {
             Direction dir = e.getDirection();
             int cur = e.getCurrentFloor().getFloorValue();
             boolean useful = false;
-            if (dir == Direction.UP && cur <= reqFloor && request.getDirection() == Direction.UP) useful = true;
-            if (dir == Direction.DOWN && cur >= reqFloor && request.getDirection() == Direction.DOWN) useful = true;
+
+            if (dir == Direction.UP && cur <= reqFloor && hallRequest.direction() == Direction.UP) {
+                useful = true;
+            }
+            if (dir == Direction.DOWN && cur >= reqFloor && hallRequest.direction() == Direction.DOWN) {
+                useful = true;
+            }
 
             int dist = Math.abs(cur - reqFloor);
             if (useful) {
@@ -47,7 +54,9 @@ public class NearestCarDispatcher implements ElevatorDispatcher {
         }
 
         // fallback
-        if (selected == null && !elevators.isEmpty()) selected = elevators.get(0);
+        if (selected == null && !elevators.isEmpty()) {
+            selected = elevators.getFirst();
+        }
         return selected;
     }
 }
